--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,19 @@
 
+input[type="text"]{
+    width: 75px;
+    height: 100px;
+    font-size: 90px;
+}
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.container{
+  margin-top: 10%;
+    text-align: center;
+    border: solid;
+    border-radius: 8px;
+    height: 450px;
+}
