--- a/styles.css
+++ b/styles.css
@@ -9,11 +9,17 @@ input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+input{
+  display: inline-block;
+  width: 150px;
+  height: 200px;
+}
 
 .container{
   margin-top: 10%;
     text-align: center;
     border: solid;
     border-radius: 8px;
+    width: 500px;
     height: 450px;
 }
